# ARES

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  architecture.md  ares.py  ares_architecture.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  setup_venv.sh  version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/instructions/: markdown.instructions.md  python.instructions.md
.github/workflow-actions/cleanup-ares/: action.yml
.github/workflow-actions/setup-ares/: action.yml
.github/workflows/: branch_prot_naming.yaml  build_docs.yml  build_lin_executable.yml  build_win_executable.yml  check_format.yml  check_license.yml  example_workflow.yml  format_workflow.yml  license_check.yml  main.yml  test_coverage.yml  test_examples.yml  test_requirements.yml  test_workflow.yml
ares/: __main__.py  ares.py  version.py
ares/cli/: ares.py
ares/core/: data.py  data_handler.py  logfile.py  parameter.py  pipeline.py  simunit.py  storage_handler.py  version.py  workflow.py
ares/interface/data/: __init__.py  ares_data_interface.py  ares_signal.py  mat_handler.py  mf4_handler.py  mf4_interface.py
ares/interface/parameter/: __init__.py  ares_param_interface.py  ares_parameter.py  ares_parameter_interface.py  dcm_handler.py  jsonparam_handler.py  parameter.py
ares/interface/plugin/: ares_plugin_interface.py
ares/models/: data.py  datadictionary_model.py  dd_model.py  logfile.py  parameter.py  parameter_model.py  pipeline.py  simunit.py  workflow.py  workflow_model.py
ares/plugins/: merge.py  sim_interface.c  sim_interface.py  simunit.py  test_plugin.py
ares/pydantic_models/: datadictionary_model.py  parameter_model.py  workflow_model.py
ares/schemas/: workflow.schema.json
ares/src/: ares_pipeline.py
ares/src/utilities/: class_data.py  class_datasource.py  class_logfile.py  class_parameter.py  class_simunit.py  class_workflow.py  workflow_schema.json
ares/utils/: custom_plugins.py  decorators.py  eval_output_path.py  hash.py  logger.py  paths.py  resolve_label_filter.py  signal.py
ares/utils/data/: ares_interface.py  mf4_interface.py
ares/utils/parameter/: dcm_interface.py  json_interface.py
docs/: conf.py  index.rst
docs/api/: cli.rst  core.rst  index.rst  interface.rst  plugins.rst  pydantic_models.rst  utils.rst
example/: workflow.json  workflow_example1.json  workflow_output.json
example/function1/: README.md  function1.c  function1.h  function1_dd.json  wrapper1.c
examples/: Makefile  README.md  datasource_1_20250819214035.0.mf4  datasource_1_20250819214035.mf4  datasource_1_20250819214150.0.mf4  datasource_1_20250819214150.mf4  datasource_1_20250819214231.0.mf4  datasource_1_20250819214231.mf4  datasource_1_20250819214251.0.mf4  datasource_1_20250819214251.mf4  workflow_example1.json  workflow_example1_20250819214035.json
examples/data/: data_example_1.mf4  data_example_1_2_mf4.py  data_example_2.mf4  data_example_3.mf4  data_example_3_mf4.py  data_example_4.mf4  data_example_4_mf4.py  data_example_5.mf4  data_example_5_mf4.py  data_example_6.mf4  data_example_7.mat  mat_v73_flat_signals.mat  mat_v73_flat_timeseries.mat
examples/derivation/: README.md  derivation.h
examples/lowpassfilterfirstorder/: lowpassfilterfirstorder.c  lowpassfilterfirstorder.h  lowpassfilterfirstorder_dd.json
examples/parameter/: dataset_example_1.dcm  dataset_example_1.json  parameterset_example_1.dcm  parameterset_example_1.json  parameterset_example_2.dcm  parameterset_example_3.json  parameterset_example_4.json
examples/plugin/: plugin_example_1.py
examples/sim_unit/: Makefile
examples/sim_unit/derivation/: derivation.c  derivation.dd.json  derivation.h  derivation_dd.json  wrapper.c
examples/sim_unit/inout_handling/: inout_handling.c  inout_handling.dd.json  inout_handling.h  inout_handling_alt.dd.json  inout_handling_alt_value.dd.json  inout_handling_vstack.dd.json  wrapper.c
examples/sim_unit/lowpassfilterfirstorder/: README.md  lowpassfilterfirstorder.c  lowpassfilterfirstorder.dd.json  lowpassfilterfirstorder.h  wrapper.c
examples/workflow/: workflow_example_1.json  workflow_example_2.json  workflow_example_3.json
examples/workflow/data_interface/: data_caching.wf.json  data_convertion.wf.json  data_labelfilter.wf.json  data_merge.wf.json  data_resampling.wf.json  data_vstack.wf.json  data_vstack_advanced.wf.json
examples/workflow/parameter_interface/: param_caching.wf.json  param_convertion.wf.json  param_labelfilter.wf.json  param_merge.wf.json
examples/workflow/plugin/: plugin_manipulation.wf.json
examples/workflow/sim_unit/: simunit_dependencies.wf.json  simunit_interface_alt.wf.json  simunit_interface_alt_default.wf.json  simunit_interface_alt_value.wf.json  simunit_interface_std.wf.json  simunit_vstack.wf.json  simunit_vstack_advanced.wf.json
scripts/: analyze_dependencies.py  channels_from_mf4.py  create_datasource_1_mf4.py  generate_changelog.py  generate_mat_examples.m  read_mf4.py  recursive_search_reference.py
src/: ares_globals.py  ares_main.py  ares_pipeline.py
src/utilities/: class_datasource.py  class_logfile.py  class_measurement.py  class_simunit.py  class_workflow.py  dd_schema.json  workflow_schema.json
test/examples/: test_example_1.py  test_example_2.py  test_example_3.py  test_workflow_examples.py
test/interfaces/data/: test_ares_data_interface.py  test_ares_signal.py  test_mat_handler.py  test_mf4_handler.py
test/utils/: test_custom_plugins.py  test_decorators.py  test_logger.py  test_resolve_label_filter.py  test_signal.py
