[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ares"
description = "automated rapid embedded simulation"
readme = "README.md"
authors = [
  {name = "Andrä Carotta", email = "not_yet@ares.com"},
  {name = "Jonas Bleich", email = "not_yet@ares.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["embedded", "simulation", "automotive", "sil", "ares"]
classifiers = [
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",

    # Topic
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Emulators",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",

    # License
    "License :: OSI Approved :: Apache Software License",

    # Operating System
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",

    # Environment
    "Environment :: Console",
]

dependencies = [
    "numpy==2.2.4",
    "asammdf==8.2.9",
    "jsonschema==4.24.0",
    "pydantic==2.11.7",
    "typeguard==4.4.4",
    "click==8.2.1",
    "colorlog==6.9.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "coverage==7.10.6",
]
dev = [
    "ruff==0.12.11",
    "build==1.3.0",
    "twine==6.2.0",
    "gitpython==3.1.45",
    "ares[test]",
]

[project.urls]
"Homepage" = "https://github.com/AndraeCarotta/ares"
"Documentation" = "https://github.com/AndraeCarotta/ares#readme"
"Bug Tracker" = "https://github.com/AndraeCarotta/ares/issues"
"Repository" = "https://github.com/AndraeCarotta/ares"
"Changelog" = "https://github.com/AndraeCarotta/ares/releases"
"Source" = "https://github.com/AndraeCarotta/ares"
"Security Policy" = "https://github.com/AndraeCarotta/ares/security/policy"
"Contributing" = "https://github.com/AndraeCarotta/ares/blob/master/CONTRIBUTING.md"

[tool.setuptools]
packages = ["ares"]

[tool.setuptools.package-data]
ares = ["py.typed"]

[tool.setuptools_scm]
write_to = "ares/core/version.py"

[tool.ruff]
# The maximum line length.
line-length = 88
# The target Python version.
target-version = "py312"

[tool.ruff.format]
# The preferred quote style.
quote-style = "double"
# The preferred indentation style.
indent-style = "space"

[tool.pyright]
# Pyright will analyze files in this directory.
include = ["ares", "packages", "test"]
reportAny = "none"
reportExplicitAny = "none"
venvPath = "."
venv = ".venv"
